--- a/peapod.html
+++ b/peapod.html
@@ -147,7 +147,7 @@
 							</ul>
 
 							<h3>Process</h3>
-							<p>For the redesign of this feature there were several phases. First I conducted a competitive analysis of competitors websites, researched best practices design patterns, and compared that with Peapod's existing gateway page. Next I conducted a heuristic evaluation of Peapod's existing gateway page to find usability issues which may negatively impact user behavior. Then I designed and administered a usability test on the existing gateway page to see how users think about and interact with the existing gateway page. From the leanings I gathered I was able to sketch out a rough drawing and rapidly iterate through ideas. Finally I prototyped a high fidelity interactive prototype for developers to implement.</p>
+							<p>For the redesign of this feature there were several phases. First I conducted a competitive analysis of competitors websites, researched best practice design patterns, and compared that with Peapod's existing gateway page. Next I conducted a heuristic evaluation of Peapod's existing gateway page to find usability issues which may negatively impact user behavior. Then I designed and administered a usability test on the existing gateway page to see how users think about and interact with the existing gateway page. From the leanings I gathered I was able to sketch out a rough drawing and rapidly iterate through ideas. Finally I prototyped a high fidelity interactive prototype for developers to implement.</p>
 
 							<h4>Research</h4>
 							
