--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 								<h2>Peapod Online Grocery</h2>
 								<p>Peapod • eCommerce • Responsive Web</p>
 							</header>
-							<p class="major">Helped improve shopping experience for an online grocery site which included a reduction in bounce rate by 30% for the Gateway page, and an optimal information architecture for the Help section.</p>
+							<p class="major">Helped improve the shopping experience for an online grocery site which included a new Gateway page which reduced the bounce rate by 30%, and a new Help section with an optimal information architecture.</p>
 							<ul class="actions vertical">
 								<li><a href="peapod.html" class="button big wide">Details</a></li>
 							</ul>
