--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<header>
-								<h2>Aquarium Exhibit Accessibility</h2>
+								<h2>Museum Exhibit Accessibility</h2>
 								<p>Shedd Aquarium • Exhibit Design • Accessibility Report</p>
 							</header>
 							<p class="major">Helped investigate the accessibility of exhibits at the Shedd Aquarium for visitors with disabilities, and provided recommendations for improvement.</p>
