--- a/order-management.html
+++ b/order-management.html
@@ -128,7 +128,7 @@
 						<div class="inner medium">
 							<h2>Problem Space</h2>
 							<img src="images/gallery/thumbs/order-management-contextual-inquiry3-thumb.jpg" alt="Image of Production Team member unloading letters from the envelope stuffer." class="image right">
-							<p>The type of business Stretto was attempting to capture is high volume, low margin. This meant that automation was needed in order to maintain a profit margin. In addition, it was decided that the contract with the third party printing vendor would not be renewed regardless, so we had to build an internal system that would allow Stretto's print facility to take over those orders. This only left several months to define an MVP, design the system, and documentation of requirements, and development.</p>
+							<p>The type of business Stretto was attempting to capture is high volume, low margin. This meant that automation was needed in order to maintain a profit margin. In addition, it was decided that the contract with the third party printing vendor would not be renewed regardless, so we had to build an internal system that would allow Stretto's print facility to take over those orders. This only left a few months to define an MVP, design the system, and documentation of requirements, and development.</p>
 
 							<h3>Goals</h3>
 							<ol>
@@ -138,6 +138,7 @@
 							</ol>
 							<h3>Constraints</h3>
 								<ul>
+									<li>Only a month budgeted for research and design</li>
 									<li>Re-routing orders from third party system to new internal system requires data field standardization.</li>
 									<li>Must support user profiles and permissions.</li>
 									<li>Must support order submission, order status for internal and external users, routing of orders to multiple facilities, and reporting.</li>
